Added controllers, viewss, specs, models to Device, DevicePort, PortValues
